--- a/css/styles.css
+++ b/css/styles.css
@@ -10,8 +10,32 @@ a {
 
 ul, ol {
     list-style: none;
+    padding: 0;
+    margin: 0;
 }
 
+.container {
+    width: 1158px;
+    padding: 0 15px;
+    margin: 0 auto;
+}
+
+.header{
+    border-bottom: 1px solid #e7e9fc;
+}
+.header-container{
+    display: flex;
+    align-items: center;
+}
+
+.navigation {
+    display: flex;
+    align-items: center;
+}
+.nav-list{
+    display: flex;
+    gap: 40px;
+}
 .logo {
     font-family: Raleway, sans-serif;
         font-weight: 700;
@@ -20,6 +44,7 @@ ul, ol {
         letter-spacing: 0.03em;
         text-transform: uppercase;
         color: #4d5ae5;
+        margin-right: 76px;
 }
 
 .logo-part {
@@ -32,6 +57,8 @@ ul, ol {
         line-height: 1.5;
         letter-spacing: 0.02em;
         color: #2E2F42;
+        padding: 24px 0;
+        display: block;
 }
 
 .nav-link:hover,
@@ -41,6 +68,7 @@ ul, ol {
 
 .address {
     font-style: normal;
+    margin-left: auto;
 }
 
 .address-link {
@@ -55,8 +83,15 @@ ul, ol {
     color: #404BBF;
 }
 
+.address-list{
+    display: flex;
+    gap: 40px;
+}
 .solution{
     background-color: #2e2f42;
+    box-sizing: content-box;
+    padding-top: 188px;
+    padding-bottom: 188px;
 }
 
 .solution-title {
@@ -66,16 +101,27 @@ ul, ol {
         letter-spacing: 0.02em;
         text-align: center;
         color: #FFFFFF;
+        margin: 0 auto;
+        padding-bottom: 48px;
+
 }
 
 .solution-button {
     background: #4D5AE5;
-        font-weight: 500;
-        font-size: 16px;
-        line-height: 1.5;
-        letter-spacing: 0.04em;
-        color: #FFFFFF;
-        cursor: pointer;
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 1.5;
+    letter-spacing: 0.04em;
+    color: #FFFFFF;
+    cursor: pointer;
+    display: block;
+    margin: 0 auto;
+    border-radius: 4px;
+    border: none;
+    padding: 16px 32px;
+    gap: 10px;
+
+        
 }
 
 .solution-button:hover,
@@ -84,7 +130,11 @@ ul, ol {
 }
 
 .topics-menu {
-
+display: flex;
+gap:24px;
+width: calc((100%-3*24px)/4);
+padding-top: 120px;
+padding-bottom: 120px;
 }
 
 .topics-menu-list {
@@ -97,6 +147,20 @@ ul, ol {
         line-height: 1.2;
         letter-spacing: 0.02em;
         color:#2E2F42;
+        margin-bottom: 8px;
+}
+
+.visually-hidden {
+    position: absolute;
+    width: 1px;
+    height: 1px;
+    margin: -1px;
+    border: 0;
+    padding: 0;
+    white-space: nowrap;
+    clip-path: inset(100%);
+    clip: rect(0 0 0 0);
+    overflow: hidden;
 }
 
 .topics-text {
@@ -104,7 +168,7 @@ ul, ol {
         font-size: 16px;
         line-height: 1.5;
         letter-spacing: 0.02em;
-        color: 434455;
+        color: #434455;
 }
 
 .team {
@@ -119,15 +183,25 @@ ul, ol {
         text-transform: capitalize;
         text-align: center;
         color: #2E2F42;
+        padding-top: 120px;
+        padding-bottom: 72px;
 }
 
-.team-menu {}
+.team-menu {
+    display: flex;
+    gap: 24px;
+    padding-bottom: 120px;
+    
+}
 
 .team-list-item {
     background-color: #FFFFFF;
+
 }
 
-.team-image {}
+.team-image {
+    
+}
 
 .team-name {
         font-weight: 500;
@@ -136,6 +210,11 @@ ul, ol {
         letter-spacing: 0.02em;
         text-align: center;
         color: #2E2F42;
+        display: flex;
+        justify-content: center;
+        padding-top: 32px;
+        gap: 65px;
+    
 }
 
 .team-text {
@@ -145,6 +224,10 @@ ul, ol {
         letter-spacing: 0.02em;
         text-align: center;
         color: #434455;
+        padding-top: 8px;
+        padding-bottom: 32px;
+        gap: 68px;
+
 }
 
 .portfolio {
@@ -155,9 +238,16 @@ ul, ol {
         text-transform: capitalize;
         text-align: center;
         color: #2E2F42;
+        padding-top: 120px;
+        padding-bottom: 72px;
 }
 
-.portfolio-list {}
+.portfolio-list {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 24px;
+    padding-bottom: 120px;
+}
 
 .portfolio-list-item {}
 
@@ -169,6 +259,8 @@ ul, ol {
     line-height: 1.2;
     letter-spacing: 0.02em;
     color: #2E2F42;
+    padding-top: 32px;
+    padding-left: 16px;
 }
 
 .portfolio-list-text {
@@ -177,6 +269,8 @@ ul, ol {
         line-height: 1.5;
         letter-spacing: 0.02em;
         color: #434455;
+        padding-bottom: 32px;
+        padding-left: 16px;
 }
 
 .foot-text {
@@ -185,6 +279,7 @@ ul, ol {
         line-height: 1.5;
         letter-spacing: 0.02em;
         color: #F4F4FD;
+        padding-bottom: 100px;
 }
 
 .logo-part-foot{
@@ -192,4 +287,27 @@ ul, ol {
 }
 .foot {
     background-color: #2E2F42;
+    padding-top: 120px;
 }
+
+h1, h2, h3 {
+    margin: 0;
+}
+
+ul{
+    list-style: none;
+    padding-left: 0;
+    margin: 0;
+}
+
+.logo-footer {
+    font-family: Raleway, sans-serif;
+    font-weight: 700;
+    font-size: 18px;
+    line-height: 1.17;
+    letter-spacing: 0.03em;
+    text-transform: uppercase;
+    color: #4d5ae5;
+    margin-right: 76px;
+    margin-bottom: 16px;
+    }
