--- a/css/styles.css
+++ b/css/styles.css
@@ -8,6 +8,10 @@ a {
     text-decoration: none;
 }
 
+img{
+    display: block
+}
+
 ul, ol {
     list-style: none;
     padding: 0;
@@ -103,6 +107,7 @@ ul, ol {
         color: #FFFFFF;
         margin: 0 auto;
         padding-bottom: 48px;
+        max-width: 496px;
 
 }
 
@@ -120,7 +125,7 @@ ul, ol {
     border: none;
     padding: 16px 32px;
     gap: 10px;
-
+    min-width: 169px
         
 }
 
@@ -129,25 +134,9 @@ ul, ol {
     background-color: #404BBF;
 }
 
-.topics-menu {
-display: flex;
-gap:24px;
-width: calc((100%-3*24px)/4);
-padding-top: 120px;
-padding-bottom: 120px;
-}
-
-.topics-menu-list {
-
-}
-
-.topics-title {
-        font-weight: 500;
-        font-size: 20px;
-        line-height: 1.2;
-        letter-spacing: 0.02em;
-        color:#2E2F42;
-        margin-bottom: 8px;
+.topics {
+    padding-top: 120px;
+    padding-bottom: 120px;
 }
 
 .visually-hidden {
@@ -163,6 +152,26 @@ padding-bottom: 120px;
     overflow: hidden;
 }
 
+.topics-menu {
+display: flex;
+gap:24px;
+}
+
+.topics-menu-list {
+width: calc((100%-72px)/4);
+}
+
+.topics-title {
+        font-weight: 500;
+        font-size: 20px;
+        line-height: 1.2;
+        letter-spacing: 0.02em;
+        color:#2E2F42;
+        margin-bottom: 8px;
+}
+
+
+
 .topics-text {
         font-weight: 400;
         font-size: 16px;
@@ -171,8 +180,12 @@ padding-bottom: 120px;
         color: #434455;
 }
 
+
+
+
 .team {
     background-color: #F4F4FD;
+    padding-top: 120px;
 }
 
 .team-title {
@@ -183,20 +196,27 @@ padding-bottom: 120px;
         text-transform: capitalize;
         text-align: center;
         color: #2E2F42;
-        padding-top: 120px;
+        
         padding-bottom: 72px;
+
 }
 
 .team-menu {
     display: flex;
     gap: 24px;
     padding-bottom: 120px;
-    
 }
+
 
 .team-list-item {
     background-color: #FFFFFF;
+    border-radius: 0px 0px 4px 4px;
+}
 
+.team-info {
+    border-radius: 0px 0px 4px 4px;
+    padding-top: 32px;
+    padding-bottom: 32px;
 }
 
 .team-image {
@@ -224,10 +244,13 @@ padding-bottom: 120px;
         letter-spacing: 0.02em;
         text-align: center;
         color: #434455;
-        padding-top: 8px;
-        padding-bottom: 32px;
-        gap: 68px;
+        margin-top: 8px;
+}
 
+
+.container-portfolio{
+    padding-top: 12px;
+    padding-bottom: 120px;
 }
 
 .portfolio {
@@ -246,12 +269,20 @@ padding-bottom: 120px;
     display: flex;
     flex-wrap: wrap;
     gap: 24px;
-    padding-bottom: 120px;
+    row-gap: 48px;
 }
 
-.portfolio-list-item {}
+.portfolio-list-item {
+   
+}
 
 .portfolio-list-image {}
+
+.portfolio-st {
+    padding: 32px 16px;
+    border: 1px solid #e7e9fc;
+    border-top: none ;
+}
 
 .portfolio-list-title {
     font-weight: 500;
@@ -259,8 +290,7 @@ padding-bottom: 120px;
     line-height: 1.2;
     letter-spacing: 0.02em;
     color: #2E2F42;
-    padding-top: 32px;
-    padding-left: 16px;
+    margin-bottom: 8px;
 }
 
 .portfolio-list-text {
@@ -269,9 +299,9 @@ padding-bottom: 120px;
         line-height: 1.5;
         letter-spacing: 0.02em;
         color: #434455;
-        padding-bottom: 32px;
-        padding-left: 16px;
+
 }
+
 
 .foot-text {
         font-weight: 400;
@@ -279,15 +309,16 @@ padding-bottom: 120px;
         line-height: 1.5;
         letter-spacing: 0.02em;
         color: #F4F4FD;
-        padding-bottom: 100px;
+        max-width: 264px;
 }
 
 .logo-part-foot{
     color: #F4F4FD;
+    display: inline-block;
 }
 .foot {
     background-color: #2E2F42;
-    padding-top: 120px;
+    padding-bottom: 100px;
 }
 
 h1, h2, h3 {
@@ -310,4 +341,7 @@ ul{
     color: #4d5ae5;
     margin-right: 76px;
     margin-bottom: 16px;
+    display: inline-block;
+    padding-top: 100px;
     }
+
