--- a/css/styles.css
+++ b/css/styles.css
@@ -185,7 +185,7 @@ width: calc((100%-72px)/4);
 
 .team {
     background-color: #F4F4FD;
-    padding-top: 120px;
+    padding: 120px 0 120px
 }
 
 .team-title {
@@ -196,8 +196,8 @@ width: calc((100%-72px)/4);
         text-transform: capitalize;
         text-align: center;
         color: #2E2F42;
+        margin-bottom: 72px;
         
-        padding-bottom: 72px;
 
 }
 
@@ -232,9 +232,8 @@ width: calc((100%-72px)/4);
         color: #2E2F42;
         display: flex;
         justify-content: center;
-        padding-top: 32px;
         gap: 65px;
-    
+        margin-bottom: 8px
 }
 
 .team-text {
@@ -249,9 +248,10 @@ width: calc((100%-72px)/4);
 
 
 .container-portfolio{
-    padding-top: 12px;
-    padding-bottom: 120px;
+    padding: 120px 0 120px 0
 }
+    
+    
 
 .portfolio {
         font-weight: 700;
@@ -261,8 +261,8 @@ width: calc((100%-72px)/4);
         text-transform: capitalize;
         text-align: center;
         color: #2E2F42;
-        padding-top: 120px;
-        padding-bottom: 72px;
+        
+        margin-bottom: 72px;
 }
 
 .portfolio-list {
@@ -318,7 +318,7 @@ width: calc((100%-72px)/4);
 }
 .foot {
     background-color: #2E2F42;
-    padding-bottom: 100px;
+    padding: 100px 0
 }
 
 h1, h2, h3 {
