--- a/css/styles.css
+++ b/css/styles.css
@@ -18,15 +18,25 @@ ul, ol {
     margin: 0;
 }
 
+p, h1, h2, h3, h4, h5, h6{
+    margin: 0;
+}
+
+
 .container {
     width: 1158px;
     padding: 0 15px;
     margin: 0 auto;
 }
 
+
+/* HEADER */
+
+
 .header{
     border-bottom: 1px solid #e7e9fc;
 }
+
 .header-container{
     display: flex;
     align-items: center;
@@ -36,19 +46,25 @@ ul, ol {
     display: flex;
     align-items: center;
 }
+
 .nav-list{
     display: flex;
     gap: 40px;
 }
+
 .logo {
     font-family: Raleway, sans-serif;
-        font-weight: 700;
-        font-size: 18px;
-        line-height: 1.17;
-        letter-spacing: 0.03em;
-        text-transform: uppercase;
-        color: #4d5ae5;
-        margin-right: 76px;
+    font-weight: 700;
+    font-size: 18px;
+    line-height: 1.17;
+    letter-spacing: 0.03em;
+    text-transform: uppercase;
+    color: #4d5ae5;
+    padding: 24px 0;
+}
+
+.logo-header{
+    margin-right: 76px;
 }
 
 .logo-part {
@@ -80,6 +96,7 @@ ul, ol {
         line-height: 1.5;
         letter-spacing: 0.02em;
         color: #434455;
+        padding: 24px 0;
 }
 
 .address-link:hover,
@@ -91,6 +108,10 @@ ul, ol {
     display: flex;
     gap: 40px;
 }
+
+/* SECTION 1 */
+
+
 .solution{
     background-color: #2e2f42;
     box-sizing: content-box;
@@ -106,7 +127,7 @@ ul, ol {
         text-align: center;
         color: #FFFFFF;
         margin: 0 auto;
-        padding-bottom: 48px;
+        margin-bottom: 48px;
         max-width: 496px;
 
 }
@@ -134,6 +155,9 @@ ul, ol {
     background-color: #404BBF;
 }
 
+/* SECTION 2 */
+
+
 .topics {
     padding-top: 120px;
     padding-bottom: 120px;
@@ -158,7 +182,7 @@ gap:24px;
 }
 
 .topics-menu-list {
-width: calc((100%-72px)/4);
+width: calc((100% - 72px)/4);
 }
 
 .topics-title {
@@ -170,8 +194,6 @@ width: calc((100%-72px)/4);
         margin-bottom: 8px;
 }
 
-
-
 .topics-text {
         font-weight: 400;
         font-size: 16px;
@@ -180,7 +202,7 @@ width: calc((100%-72px)/4);
         color: #434455;
 }
 
-
+/* SECTION 3 */
 
 
 .team {
@@ -197,20 +219,17 @@ width: calc((100%-72px)/4);
         text-align: center;
         color: #2E2F42;
         margin-bottom: 72px;
-        
-
 }
 
 .team-menu {
     display: flex;
     gap: 24px;
-    padding-bottom: 120px;
 }
-
 
 .team-list-item {
     background-color: #FFFFFF;
     border-radius: 0px 0px 4px 4px;
+    width: calc((100% - 72px)/4);
 }
 
 .team-info {
@@ -219,8 +238,7 @@ width: calc((100%-72px)/4);
     padding-bottom: 32px;
 }
 
-.team-image {
-    
+.team-image {   
 }
 
 .team-name {
@@ -230,9 +248,6 @@ width: calc((100%-72px)/4);
         letter-spacing: 0.02em;
         text-align: center;
         color: #2E2F42;
-        display: flex;
-        justify-content: center;
-        gap: 65px;
         margin-bottom: 8px
 }
 
@@ -243,26 +258,23 @@ width: calc((100%-72px)/4);
         letter-spacing: 0.02em;
         text-align: center;
         color: #434455;
-        margin-top: 8px;
 }
 
+/* SECTION 4 */
 
 .container-portfolio{
     padding: 120px 0 120px 0
 }
     
-    
-
 .portfolio {
-        font-weight: 700;
-        font-size: 36px;
-        line-height: 1.11;
-        letter-spacing: 0.02em;
-        text-transform: capitalize;
-        text-align: center;
-        color: #2E2F42;
-        
-        margin-bottom: 72px;
+    font-weight: 700;
+    font-size: 36px;
+    line-height: 1.11;
+    letter-spacing: 0.02em;
+    text-transform: capitalize;
+    text-align: center;
+    color: #2E2F42;
+    margin-bottom: 72px;
 }
 
 .portfolio-list {
@@ -273,7 +285,7 @@ width: calc((100%-72px)/4);
 }
 
 .portfolio-list-item {
-   
+width: calc((100% - 72px)/3);
 }
 
 .portfolio-list-image {}
@@ -299,49 +311,35 @@ width: calc((100%-72px)/4);
         line-height: 1.5;
         letter-spacing: 0.02em;
         color: #434455;
-
 }
 
+/* FOOTER */
 
-.foot-text {
-        font-weight: 400;
-        font-size: 16px;
-        line-height: 1.5;
-        letter-spacing: 0.02em;
-        color: #F4F4FD;
-        max-width: 264px;
-}
 
-.logo-part-foot{
-    color: #F4F4FD;
-    display: inline-block;
-}
 .foot {
     background-color: #2E2F42;
     padding: 100px 0
 }
 
-h1, h2, h3 {
-    margin: 0;
-}
-
-ul{
-    list-style: none;
-    padding-left: 0;
-    margin: 0;
-}
-
-.logo-footer {
-    font-family: Raleway, sans-serif;
-    font-weight: 700;
-    font-size: 18px;
-    line-height: 1.17;
-    letter-spacing: 0.03em;
-    text-transform: uppercase;
-    color: #4d5ae5;
-    margin-right: 76px;
+/*.logo-footer { 
     margin-bottom: 16px;
+}*/
+
+.logo-part-foot {
+    color: #F4F4FD;
     display: inline-block;
-    padding-top: 100px;
-    }
+}
+
+.foot-text {
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 1.5;
+    letter-spacing: 0.02em;
+    color: #F4F4FD;
+    max-width: 264px;
+    margin-top: 16px;
+}
+
+
+
 
